--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.show.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.show.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.show.field_audience_statistics
+    - field.field.node.show.field_hero_quaternary
     - field.field.node.show.field_image
     - field.field.node.show.field_show_background_image
     - field.field.node.show.field_show_description
@@ -14,13 +16,68 @@ dependencies:
     - field.field.node.show.field_show_recommend
     - field.field.node.show.field_show_schedules
     - field.field.node.show.field_show_videos
+    - field.field.node.show.field_success_stories_a
     - image.style.thumbnail
     - node.type.show
   module:
+    - field_group
     - image
     - link
     - paragraphs
     - path
+third_party_settings:
+  field_group:
+    group_fields:
+      children:
+        - title
+        - field_show_description
+        - field_image
+        - field_show_background_image
+        - field_show_genres
+        - field_show_recommend
+        - field_show_schedules
+        - field_show_network
+        - field_show_videos
+        - field_show_media_type
+        - field_show_links
+      parent_name: group_tabs
+      weight: 1
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: Fields
+    group_blocks:
+      children:
+        - field_blocks
+        - field_hero_quaternary
+        - field_audience_statistics
+        - field_success_stories_a
+      parent_name: group_tabs
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Blocks
+    group_tabs:
+      children:
+        - group_fields
+        - group_blocks
+      parent_name: ''
+      weight: 0
+      format_type: tabs
+      format_settings:
+        id: ''
+        classes: ''
+        direction: horizontal
+      label: Tabs
 id: node.show.default
 targetEntityType: node
 bundle: show
@@ -28,19 +85,23 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 2
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_image:
-    weight: 7
+  field_audience_statistics:
+    type: entity_reference_paragraphs
+    weight: 9
     settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: image_image
     region: content
-  field_show_background_image:
+  field_hero_quaternary:
     type: entity_reference_paragraphs
     weight: 8
     settings:
@@ -52,15 +113,52 @@ content:
       default_paragraph_type: ''
     third_party_settings: {  }
     region: content
+  field_image:
+    weight: 2
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
+    region: content
+  field_show_background_image:
+    type: entity_reference_paragraphs
+    weight: 3
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
   field_show_description:
     type: string_textarea
-    weight: 17
+    weight: 1
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
   field_show_genres:
+    type: entity_reference_autocomplete
+    weight: 4
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_show_links:
+    type: link_default
+    weight: 10
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  field_show_media_type:
     type: entity_reference_autocomplete
     weight: 9
     region: content
@@ -69,34 +167,9 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_show_id:
-    type: string_textfield
-    weight: 15
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_show_links:
-    type: link_default
-    weight: 16
-    region: content
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-  field_show_media_type:
-    type: entity_reference_autocomplete
-    weight: 14
-    region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   field_show_network:
     type: entity_reference_autocomplete
-    weight: 12
+    weight: 7
     region: content
     settings:
       match_operator: CONTAINS
@@ -105,7 +178,7 @@ content:
     third_party_settings: {  }
   field_show_recommend:
     type: entity_reference_autocomplete
-    weight: 10
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
@@ -114,7 +187,7 @@ content:
     third_party_settings: {  }
   field_show_schedules:
     type: entity_reference_autocomplete
-    weight: 11
+    weight: 6
     region: content
     settings:
       match_operator: CONTAINS
@@ -123,24 +196,29 @@ content:
     third_party_settings: {  }
   field_show_videos:
     type: entity_reference_autocomplete
-    weight: 13
+    weight: 8
     region: content
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_success_stories_a:
+    type: entity_reference_paragraphs
+    weight: 10
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
   path:
     type: path
     weight: 5
     settings: {  }
-    third_party_settings: {  }
-    region: content
-  promote:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 3
     third_party_settings: {  }
     region: content
   status:
@@ -148,13 +226,6 @@ content:
     settings:
       display_label: true
     weight: 6
-    third_party_settings: {  }
-    region: content
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 4
     third_party_settings: {  }
     region: content
   title:
@@ -167,11 +238,14 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 1
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  field_show_id: true
+  promote: true
+  sticky: true
