--- a/source/drupal/var/drupal-config/sync/field.field.node.network.field_image.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.network.field_image.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: network
 label: 'Logo Mono color'
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
