--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.network.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.network.default.yml
@@ -3,16 +3,63 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.network.field_audience_statistics
     - field.field.node.network.field_blocks
+    - field.field.node.network.field_hero_quaternary
     - field.field.node.network.field_image
     - field.field.node.network.field_image2
     - field.field.node.network.field_network
     - image.style.thumbnail
     - node.type.network
   module:
+    - field_group
     - image
     - paragraphs
     - path
+third_party_settings:
+  field_group:
+    group_tabs:
+      children:
+        - group_fields
+        - group_blocks
+      parent_name: ''
+      weight: 0
+      format_type: tabs
+      format_settings:
+        id: ''
+        classes: ''
+        direction: horizontal
+      label: Tabs
+    group_fields:
+      children:
+        - title
+        - field_image
+        - field_image2
+        - field_network
+      parent_name: group_tabs
+      weight: 1
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: Fields
+    group_blocks:
+      children:
+        - field_hero_quaternary
+        - field_audience_statistics
+      parent_name: group_tabs
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Blocks
 id: node.network.default
 targetEntityType: node
 bundle: network
@@ -20,12 +67,24 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_blocks:
-    weight: 123
+  field_audience_statistics:
+    weight: 15
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    type: entity_reference_paragraphs
+    region: content
+  field_hero_quaternary:
+    weight: 14
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -37,7 +96,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_image:
-    weight: 31
+    weight: 4
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -45,7 +104,7 @@ content:
     type: image_image
     region: content
   field_image2:
-    weight: 32
+    weight: 5
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -53,7 +112,7 @@ content:
     type: image_image
     region: content
   field_network:
-    weight: 122
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
@@ -63,34 +122,20 @@ content:
     region: content
   path:
     type: path
-    weight: 30
+    weight: 6
     settings: {  }
-    third_party_settings: {  }
-    region: content
-  promote:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 15
     third_party_settings: {  }
     region: content
   status:
     type: boolean_checkbox
+    weight: 5
+    region: content
     settings:
       display_label: true
-    weight: 121
     third_party_settings: {  }
-    region: content
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 16
-    third_party_settings: {  }
-    region: content
   title:
     type: string_textfield
-    weight: -5
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -98,11 +143,14 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  field_blocks: true
+  promote: true
+  sticky: true
