--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -16,6 +16,7 @@ dependencies:
     - paragraphs.paragraphs_type.block_double_image
     - paragraphs.paragraphs_type.block_download_file_a
     - paragraphs.paragraphs_type.block_download_file_b
+    - paragraphs.paragraphs_type.block_filter_show_content
     - paragraphs.paragraphs_type.block_find_your_audience
     - paragraphs.paragraphs_type.block_glossary_a
     - paragraphs.paragraphs_type.block_glossary_b
@@ -92,26 +93,26 @@ settings:
       blockhowtoadvertise: blockhowtoadvertise
       blockimagecalltoactions: blockimagecalltoactions
       blockimagewithcontent: blockimagewithcontent
-      blockimagecarousel: blockimagecarousel
       blocklatest: blocklatest
+      blockimagecarousel: blockimagecarousel
       blockarticleteaser: blockarticleteaser
       blockaudiofragment: blockaudiofragment
       blockbutton: blockbutton
-      blockblogpost: blockblogpost
       blockmore: blockmore
+      blockblogpost: blockblogpost
       blockherosecondary: blockherosecondary
-      blockheromain: blockheromain
       blockmap: blockmap
+      blockheromain: blockheromain
       blockmapsecondary: blockmapsecondary
       blockmarketmap: blockmarketmap
       blocknetworkoverview: blocknetworkoverview
-      blockherotertiary: blockherotertiary
       blockpagenotfound: blockpagenotfound
+      blockherotertiary: blockherotertiary
       blockpathtopurchase: blockpathtopurchase
       blockprogrammodule: blockprogrammodule
       blockquote: blockquote
-      blockinfo: blockinfo
       blockquotesecondary: blockquotesecondary
+      blockinfo: blockinfo
       blocksmallheading: blocksmallheading
       blocksmallimage: blocksmallimage
       blocksmallinfo: blocksmallinfo
@@ -142,6 +143,7 @@ settings:
       block_infographic: block_infographic
       block_large_video: block_large_video
       block_main_product_nav: block_main_product_nav
+      block_filter_show_content: block_filter_show_content
       block_multiple_images: block_multiple_images
       block_image_list: block_image_list
       block_persona_selector_banner: block_persona_selector_banner
@@ -179,13 +181,13 @@ settings:
       blockimagewithcontent:
         enabled: true
         weight: 12
-      blockimagecarousel:
+      blocklatest:
         enabled: true
         weight: 13
       link:
         weight: 13
         enabled: false
-      blocklatest:
+      blockimagecarousel:
         enabled: true
         weight: 13
       blockarticleteaser:
@@ -197,25 +199,25 @@ settings:
       blockaudiofragment:
         enabled: true
         weight: 16
-      blockbutton:
-        enabled: true
-        weight: 18
       slide:
         weight: 18
         enabled: false
-      blockblogpost:
+      blockbutton:
+        enabled: true
+        weight: 18
+      blockmore:
         enabled: true
         weight: 19
-      blockmore:
+      blockblogpost:
         enabled: true
         weight: 19
       blockherosecondary:
         enabled: true
         weight: 23
-      blockheromain:
+      blockmap:
         enabled: true
         weight: 26
-      blockmap:
+      blockheromain:
         enabled: true
         weight: 26
       blockmapsecondary:
@@ -227,10 +229,10 @@ settings:
       blocknetworkoverview:
         enabled: true
         weight: 29
-      blockherotertiary:
+      blockpagenotfound:
         enabled: true
         weight: 30
-      blockpagenotfound:
+      blockherotertiary:
         enabled: true
         weight: 30
       blockpathtopurchase:
@@ -245,10 +247,10 @@ settings:
       blockquote:
         enabled: true
         weight: 35
-      blockinfo:
+      blockquotesecondary:
         enabled: true
         weight: 36
-      blockquotesecondary:
+      blockinfo:
         enabled: true
         weight: 36
       blocksmallheading:
@@ -374,15 +376,18 @@ settings:
       block_main_product_nav:
         enabled: true
         weight: 118
+      block_filter_show_content:
+        enabled: true
+        weight: 120
       block_multiple_images:
         enabled: true
         weight: 120
-      block_pdf:
-        weight: 121
-        enabled: false
       block_image_list:
         enabled: true
         weight: 121
+      block_pdf:
+        weight: 121
+        enabled: false
       block_persona_selector_banner:
         enabled: true
         weight: 122
@@ -428,10 +433,10 @@ settings:
       core_product_message_item:
         weight: 168
         enabled: false
-      blog_post_item:
+      device:
         weight: 169
         enabled: false
-      device:
+      blog_post_item:
         weight: 169
         enabled: false
       glossary_a_item:
