--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -16,6 +16,7 @@ dependencies:
     - paragraphs.paragraphs_type.block_double_image
     - paragraphs.paragraphs_type.block_download_file_a
     - paragraphs.paragraphs_type.block_download_file_b
+    - paragraphs.paragraphs_type.block_filter_network_content
     - paragraphs.paragraphs_type.block_filter_show_content
     - paragraphs.paragraphs_type.block_find_your_audience
     - paragraphs.paragraphs_type.block_glossary_a
@@ -111,15 +112,15 @@ settings:
       blockpathtopurchase: blockpathtopurchase
       blockprogrammodule: blockprogrammodule
       blockquote: blockquote
-      blockquotesecondary: blockquotesecondary
       blockinfo: blockinfo
+      blockquotesecondary: blockquotesecondary
       blocksmallheading: blocksmallheading
       blocksmallimage: blocksmallimage
       blocksmallinfo: blocksmallinfo
       blockstoryinfoimages: blockstoryinfoimages
       blocktext: blocktext
-      blockfiltercontent: blockfiltercontent
       block_map_tertiary: block_map_tertiary
+      blockfiltercontent: blockfiltercontent
       block_video_with_call_to_actions: block_video_with_call_to_actions
       blockpersonaselector: blockpersonaselector
       block_audience_product_top: block_audience_product_top
@@ -143,9 +144,10 @@ settings:
       block_infographic: block_infographic
       block_large_video: block_large_video
       block_main_product_nav: block_main_product_nav
-      block_filter_show_content: block_filter_show_content
       block_multiple_images: block_multiple_images
+      block_filter_show_content: block_filter_show_content
       block_image_list: block_image_list
+      block_filter_network_content: block_filter_network_content
       block_persona_selector_banner: block_persona_selector_banner
       block_product_list: block_product_list
       block_show_detail: block_show_detail
@@ -247,10 +249,10 @@ settings:
       blockquote:
         enabled: true
         weight: 35
-      blockquotesecondary:
+      blockinfo:
         enabled: true
         weight: 36
-      blockinfo:
+      blockquotesecondary:
         enabled: true
         weight: 36
       blocksmallheading:
@@ -277,10 +279,10 @@ settings:
       blocktext:
         enabled: true
         weight: 42
-      blockfiltercontent:
+      block_map_tertiary:
         enabled: true
         weight: 48
-      block_map_tertiary:
+      blockfiltercontent:
         enabled: true
         weight: 48
       block_video_with_call_to_actions:
@@ -376,13 +378,16 @@ settings:
       block_main_product_nav:
         enabled: true
         weight: 118
-      block_filter_show_content:
-        enabled: true
-        weight: 120
       block_multiple_images:
         enabled: true
         weight: 120
+      block_filter_show_content:
+        enabled: true
+        weight: 120
       block_image_list:
+        enabled: true
+        weight: 121
+      block_filter_network_content:
         enabled: true
         weight: 121
       block_pdf:
@@ -433,10 +438,10 @@ settings:
       core_product_message_item:
         weight: 168
         enabled: false
-      device:
+      blog_post_item:
         weight: 169
         enabled: false
-      blog_post_item:
+      device:
         weight: 169
         enabled: false
       glossary_a_item:
