--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.blocksmallheading.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.blocksmallheading.default.yml
@@ -4,12 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.blocksmallheading.field_heading
+    - field.field.paragraph.blocksmallheading.field_new_heading
     - field.field.paragraph.blocksmallheading.field_styles
     - paragraphs.paragraphs_type.blocksmallheading
   module:
     - field_group
     - paragraphs
-    - text
 third_party_settings:
   field_group:
     group_styles:
@@ -24,19 +24,35 @@ third_party_settings:
         open: false
         required_fields: true
       label: Styles
+    group_heading:
+      children:
+        - field_new_heading
+      parent_name: ''
+      weight: 0
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Heading
 id: paragraph.blocksmallheading.default
 targetEntityType: paragraph
 bundle: blocksmallheading
 mode: default
 content:
-  field_heading:
+  field_new_heading:
+    type: entity_reference_paragraphs
     weight: 0
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
     region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
   field_styles:
     weight: 1
     settings:
@@ -51,5 +67,6 @@ content:
     region: content
 hidden:
   created: true
+  field_heading: true
   status: true
   uid: true
